Finish section 22.2.2 Console Setup. Update table on available consoles.
Sponsored by: iXsystems


git-svn-id: https://svn.freebsd.org/doc/head@43875 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
+++ b/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
@@ -342,7 +342,7 @@ me:\
 	    example, to set the German language for the
 	    <command>sh</command> shell, these lines could be added to
 	    <filename>~/.profile</filename> to set the shell for that
-	    user only.  Thse lines could also be added to
+	    user only.  These lines could also be added to
 	    <filename>/etc/profile</filename> or
 	    <filename>/usr/share/skel/dot.profile</filename> to set
 	    that shell for all users:</para>
@@ -365,7 +365,7 @@ me:\
 	    <filename>~/.xinitrc</filename> also depends upon the
 	    shell.  The first example is for the <command>sh</command>
 	    shell and the second is for the <command>csh</command>
-	    shell.</para>
+	    shell:</para>
 
 	  <programlisting><envar>LANG=de_DE.ISO8859-1; export LANG</envar></programlisting>
 
@@ -376,75 +376,59 @@ me:\
     <sect2 xml:id="setting-console">
       <title>Console Setup</title>
 
-      <para>For all single C chars character sets, set the correct
-	console fonts in <filename>/etc/rc.conf</filename> for the
-	language in question with:</para>
+      <para>Several localized fonts
+	are available for the console.  To see a listing of
+	available fonts, type
+	<command>ls /usr/share/syscons/fonts</command>.  To configure
+	the console font, specify the
+	<replaceable>font_name</replaceable>,
+	without the <filename>.fnt</filename> suffix,
+	in <filename>/etc/rc.conf</filename>:</para>
 
       <programlisting>font8x16=<replaceable>font_name</replaceable>
 font8x14=<replaceable>font_name</replaceable>
 font8x8=<replaceable>font_name</replaceable></programlisting>
 
-      <para>The <replaceable>font_name</replaceable> is taken from
-	<filename>/usr/share/syscons/fonts</filename>,
-	without the <filename>.fnt</filename> suffix.</para>
-
-      <indexterm>
-	<primary><application>sysinstall</application></primary>
-      </indexterm>
       <indexterm><primary>keymap</primary></indexterm>
       <indexterm><primary>screenmap</primary></indexterm>
-      <para>The keymap and screenmap for the single C chars character
-	set can be set using <command>sysinstall</command>.  Once
-	inside <application>sysinstall</application>, choose
-	<guimenuitem>Configure</guimenuitem>, then
-	<guimenuitem>Console</guimenuitem>.  Alternatively,
-	add the following to <filename>/etc/rc.conf</filename>:</para>
+      <para>The keymap and screenmap 
+	can be set by
+	adding the following to <filename>/etc/rc.conf</filename>:</para>
 
       <programlisting>scrnmap=<replaceable>screenmap_name</replaceable>
 keymap=<replaceable>keymap_name</replaceable>
 keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
 
-      <para>The <replaceable>screenmap_name</replaceable> is taken
-	from <filename>/usr/share/syscons/scrnmaps</filename>,
-	without the <filename>.scm</filename> suffix.  A screenmap
+      <para>To see the list of available screenmaps, type
+	<command>ls /usr/share/syscons/scrnmaps</command>.  Do
+	not include the <filename>.scm</filename> suffix when
+	specifying <replaceable>screenmap_name</replaceable>.  A screenmap
 	with a corresponding mapped font is usually needed as a
 	workaround for expanding bit 8 to bit 9 on a VGA adapter's
-	font character matrix.  This will move letters out of the
+	font character matrix so that letters are moved out of the
 	pseudographics area if the screen font uses a bit 8
 	column.</para>
 
-      <para>If <application>moused</application> is enabled in
-	<filename>/etc/rc.conf</filename>, review the mouse cursor
-	information in the next paragraph.</para>
-
-      <indexterm>
-	<primary><application>moused</application></primary>
-      </indexterm>
-      <para>By default, the mouse cursor of the &man.syscons.4; driver
-	occupies the 0xd0-0xd3 range in the character set.  If the
-	language uses this range, move the cursor's range.  To enable
-	this workaround for &os;, add the following line to
-	<filename>/etc/rc.conf</filename>:</para>
-
-      <programlisting>mousechar_start=3</programlisting>
-
-      <para>The <replaceable>keymap_name</replaceable> in the above
-	example is taken from
-	<filename>/usr/share/syscons/keymaps</filename>, without the
+      <para>To see the list of available keymaps, type
+	<filename>ls /usr/share/syscons/keymaps</filename>.  When
+	specifying the <replaceable>keymap_name</replaceable>, do not include the
 	<filename>.kbd</filename> suffix.  When uncertain as to which
 	keymap to use, &man.kbdmap.1; can be used to test keymaps
 	without rebooting.</para>
 
-      <para>The <literal>keychange</literal> is usually needed to
+      <para>The <literal>keychange</literal> entry is usually needed to
 	program function keys to match the selected terminal type
-	because function key sequences cannot be defined in the key
-	map.</para>
+	because function key sequences cannot be defined in the keymap.</para>
 
-      <para>Be sure to set the correct console terminal type in
+      <para>Next, set the correct console terminal type in
 	<filename>/etc/ttys</filename> for all virtual terminal
-	entries.  Current pre-defined correspondences are:</para>
+	entries.  <xref
+	  linkend="locale-charset"/> summarizes the available
+	terminal types.:</para>
 
-      <informaltable frame="none" pgwide="1">
+      <table xml:id="locale-charset" frame="none" pgwide="1">
+	<title>Defined Terminal Types for Character Sets</title>
+
 	<tgroup cols="2">
 	  <thead>
 	    <row>
@@ -490,22 +474,27 @@ keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
 	    </row>
 	  </tbody>
 	</tgroup>
-      </informaltable>
+      </table>
 
-      <para>For languages with wide or multibyte characters, use the
-	correct &os; port in <filename>/usr/ports/language</filename>.
-	Some applications appear as serial terminals to the system.
-	Reserve enough terminals in <filename>/etc/ttys</filename>
-	for both <application>Xorg</application> and the pseudo-serial
-	console.  Here is a partial list of applications for using
-	other languages in the console:</para>
+      <indexterm>
+	<primary><application>moused</application></primary>
+      </indexterm>
 
-      <informaltable frame="none" pgwide="1">
+      <para>For languages with wide or multibyte characters, install a
+	console for that language from the &os; Ports Collection.  The
+	available ports are summarized in <xref
+	  linkend="locale-console"/>.  Once installed, refer to the
+	port's <filename>pkg-message</filename> or man pages for
+	configuration and usage instructions.</para>
+
+      <table xml:id="locale-console" frame="none" pgwide="1">
+	<title>Available Console From Ports Collection</title>
+
 	<tgroup cols="2">
 	  <thead>
 	    <row>
 	      <entry>Language</entry>
-	      <entry>Location</entry>
+	      <entry>Port Location</entry>
 	    </row>
 	  </thead>
 
@@ -516,19 +505,45 @@ keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
 	    </row>
 
 	    <row>
-	      <entry>Japanese</entry>
-	      <entry><package>japanese/kon2-16dot</package> or
-		<package>japanese/mule-freewnn</package></entry>
+	      <entry>Chinese/Japanese/Korean</entry>
+	      <entry><package>chinese/cce</package></entry>
 	    </row>
 
 	    <row>
-	      <entry>Korean</entry>
-	      <entry><package>korean/han</package></entry>
+	      <entry>Japanese</entry>
+	      <entry><package>chinese/kon2</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Chinese/Japanese/Korean</entry>
+	      <entry><package>chinese/zhcon</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/kon2-14dot</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/kon2-16dot</package></entry>
 	    </row>
 	  </tbody>
 	</tgroup>
-      </informaltable>
-    </sect2>
+      </table>
+
+     <para>If <application>moused</application> is enabled in
+	<filename>/etc/rc.conf</filename>, additional configuration
+	may be required.
+	By default, the mouse cursor of the &man.syscons.4; driver
+	occupies the <literal>0xd0</literal>-<literal>0xd3</literal> range in the character set.  If the
+	language uses this range, move the cursor's range.  To enable
+	this workaround for &os;, add the following line to
+	<filename>/etc/rc.conf</filename>:</para>
+
+	<programlisting>mousechar_start=3</programlisting>
+
+      </sect2>
 
     <sect2>
       <title>Xorg Setup</title>
